test_regress/t/t_foreach_noivar_bad.out
%Warning-NOEFFECT: t/t_foreach_noivar.v:19:5: foreach with no loop variable has no effect
                                            : ... note: In instance 't'
   19 |     foreach (array[]) begin   
      |     ^~~~~~~
                   ... For warning description see https://verilator.org/warn/NOEFFECT?v=latest
                   ... Use "/* verilator lint_off NOEFFECT */" and lint_on around source to disable this message.
%Warning-NOEFFECT: t/t_foreach_noivar.v:25:5: foreach with no loop variable has no effect
                                            : ... note: In instance 't'
   25 |     foreach (array[,,]) begin   
      |     ^~~~~~~
%Error: Exiting due to
